--- a/class_notebooks/linear_regression/linear_regression_example.ipynb
+++ b/class_notebooks/linear_regression/linear_regression_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
     }
    ],
    "source": [
-    "model.predict(X=[[12],[1],[100]])"
+    "    model.predict(X=[[12],[1],[100]])"
    ]
   },
   {
@@ -654,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CSCN8010_classic_ml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -668,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
